@@ -74,6 +74,7 @@ Latest changes:
     * kernel patch for multiple ftdi devices
     * mtd char devices were created with wrong minors
     * disable iptables-cgi for 7270
+    * add menuconfig option for 7270 with 16 MB flash
 
 === release Freetz-1.0 ===
 
